Adds detection for Apple Watch Series 7 45mm

--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -939,3 +939,29 @@
     model: Watch Series 7 41mm
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/8.0.1 model/Watch6,7 hwp/t8301 build/19R354 (6; dt:259)
+  os:
+    name: watchOS
+    version: 8.0.1
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch Series 7 45mm
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/8.0.1 model/Watch6,9 hwp/t8301 build/19R354 (6; dt:259)
+  os:
+    name: watchOS
+    version: 8.0.1
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch Series 7 45mm
+  os_family: iOS
+  browser_family: Unknown
