--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1060,6 +1060,9 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
       model: 'iPad Air 4'
       device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad14[C,_][12]'
+      model: 'iPad Mini 6'
+      device: 'tablet'
 
     - regex: 'Apple-?TV2[C,_]1'
       model: 'Apple TV 2'
