--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -1,5 +1,5 @@
 ---
-- 
+-
   user_agent: Mozilla/5.0 (Linux; Android 8.0; LEO-BX9 Build/OWDD.180926.001.A1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Cr4 Mobile Safari/537.36
   os:
     name: Android
@@ -17,7 +17,7 @@
     model: Smart Watch 2
   os_family: Android
   browser_family: Chrome
-- 
+-
   user_agent: Mozilla/5.0 Linux; Android 7.1.1; LG Watch Urbane Build/NWD1.180306.004 AppleWebKit/537.36 KHTML, like Gecko Chrome/19.77.34.5 Mobile Safari/537.36
   os:
     name: Android
@@ -35,7 +35,7 @@
     model: Watch Urbane
   os_family: Android
   browser_family: Chrome
-- 
+-
   user_agent: Mozilla/5.0 (Linux; Tizen 4.0; SAMSUNG SM-R820) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/2.0 Chrome/56.0.2924.0 Mobile Safari/537.36
   os:
     name: Tizen
@@ -53,7 +53,7 @@
     model: Galaxy Watch Active 2 44mm
   os_family: Other Mobile
   browser_family: Chrome
-- 
+-
   user_agent: Watch1,1/4.3.2 (15U70)
   os:
     name: watchOS
@@ -66,7 +66,7 @@
     model: Watch 38mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: Watch1,2/4.3.2 (15U70)
   os:
     name: watchOS
@@ -79,7 +79,7 @@
     model: Watch 42mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/5.3 model/Watch2,3 hwp/t8002 build/16U569 (6; dt:133)
   os:
     name: watchOS
@@ -92,7 +92,7 @@
     model: Watch Series 2 38mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/5.1.3 model/Watch2,4 hwp/t8002 build/16S535 (6; dt:134)
   os:
     name: watchOS
@@ -105,7 +105,7 @@
     model: Watch Series 2 42mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.1.1 model/Watch2,6 hwp/t8002 build/17S449 (6; dt:148)
   os:
     name: watchOS
@@ -118,7 +118,7 @@
     model: Watch Series 1 38mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch2,7 hwp/t8002 build/17R5556d (6; dt:149)
   os:
     name: watchOS
@@ -131,7 +131,7 @@
     model: Watch Series 1 42mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch3,1 hwp/t8004 build/17R527 (6; dt:153)
   os:
     name: watchOS
@@ -144,7 +144,7 @@
     model: Watch Series 3 38mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch3,2 hwp/t8004 build/17R5532f (6; dt:154)
   os:
     name: watchOS
@@ -157,7 +157,7 @@
     model: Watch Series 3 42mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/5.3 model/Watch3,3 hwp/t8004 build/16U569 (6; dt:155)
   os:
     name: watchOS
@@ -170,7 +170,7 @@
     model: Watch Series 3 38mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/5.3 model/Watch3,4 hwp/t8004 build/16U569 (6; dt:156)
   os:
     name: watchOS
@@ -183,7 +183,7 @@
     model: Watch Series 3 42mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch4,1 hwp/t8006 build/17R5556d (6; dt:190)
   os:
     name: watchOS
@@ -196,7 +196,7 @@
     model: Watch Series 4 40mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch4,2 hwp/t8006 build/17R575 (6; dt:191)
   os:
     name: watchOS
@@ -209,7 +209,7 @@
     model: Watch Series 4 44mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch4,3 hwp/t8006 build/17R5546f (6; dt:192)
   os:
     name: watchOS
@@ -222,7 +222,7 @@
     model: Watch Series 4 40mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.1.1 model/Watch4,4 hwp/t8006 build/17S449 (6; dt:193)
   os:
     name: watchOS
@@ -235,7 +235,7 @@
     model: Watch Series 4 44mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.1.1 model/Watch5,1 hwp/t8006 build/17S449 (6; dt:201)
   os:
     name: watchOS
@@ -248,7 +248,7 @@
     model: Watch Series 5 40mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.2.6 model/Watch5,2 hwp/t8006 build/17T620 (6; dt:201)
   os:
     name: watchOS
@@ -261,7 +261,7 @@
     model: Watch Series 5 44mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.1.3 model/Watch5,3 hwp/t8006 build/17S811 (6; dt:202)
   os:
     name: watchOS
@@ -274,7 +274,7 @@
     model: Watch Series 5 40mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch5,4 hwp/t8006 build/17R561a (6; dt:202)
   os:
     name: watchOS
@@ -287,7 +287,7 @@
     model: Watch Series 5 44mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: com.apple.appstored/1.0 watchOS/7.0 model/Watch6,1 hwp/t8301 build/18R382 (6; dt:226) AMS/1
   os:
     name: watchOS
@@ -300,7 +300,7 @@
     model: Watch Series 6 40mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: 'server-bag [Watch OS,7.1,18R590,Watch6,2]'
   os:
     name: watchOS
@@ -313,7 +313,7 @@
     model: Watch Series 6 44mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: 'server-bag [Watch OS,7.0.1,18R395,Watch6,3]'
   os:
     name: watchOS
@@ -326,7 +326,7 @@
     model: Watch Series 6 40mm
   os_family: iOS
   browser_family: Unknown
-- 
+-
   user_agent: 'server-bag [Watch OS,7.0,18R382,Watch6,4]'
   os:
     name: watchOS
@@ -913,3 +913,55 @@
     model: Mirage Solo
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: atc/1.0 watchOS/8.0.1 model/Watch6,6 hwp/t8301 build/19R354 (6; dt:259)
+  os:
+    name: watchOS
+    version: 8.0.1
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch Series 7 41mm
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/8.0.1 model/Watch6,8 hwp/t8301 build/19R354 (6; dt:259)
+  os:
+    name: watchOS
+    version: 8.0.1
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch Series 7 41mm
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/8.0.1 model/Watch6,7 hwp/t8301 build/19R354 (6; dt:259)
+  os:
+    name: watchOS
+    version: 8.0.1
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch Series 7 45mm
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/8.0.1 model/Watch6,9 hwp/t8301 build/19R354 (6; dt:259)
+  os:
+    name: watchOS
+    version: 8.0.1
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch Series 7 45mm
+  os_family: iOS
+  browser_family: Unknown
