--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -681,6 +681,12 @@ Apple:
     - regex: 'Watch([456]),[24]'
       device: 'wearable'
       model: 'Watch Series $1 44mm'
+    - regex: 'Watch6,[68]'
+      device: 'wearable'
+      model: 'Watch Series 7 41mm'
+    - regex: 'Watch6,[79]'
+      device: 'wearable'
+      model: 'Watch Series 7 45mm'
 
       # specific desktop devices
     - regex: '(?:.+_)?MacBook7(?:%2C|,)1'
