Adds detection for Apple iPad 9 10.2"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1057,6 +1057,9 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad11[C,_][67]'
       model: 'iPad 8 10.2"'
       device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad12[C,_][12]'
+      model: 'iPad 9 10.2"'
+      device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
       model: 'iPad Air 4'
       device: 'tablet'
