--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -10185,3 +10185,35 @@
     model: iPad Mini 6
   os_family: iOS
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (iPad; CPU OS 15_0_1 like Mac OS X) WebKit/8612 (KHTML, like Gecko) Mobile/19A348 [FBAN/FBIOS;FBDV/iPad12,1;FBMD/iPad;FBSN/iOS;FBSV/15.0.1;FBSS/2;FBID/tablet;FBLC/en_GB;FBOP/5]
+  os:
+    name: iPadOS
+    version: 15.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad 9 10.2"
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (iPad; CPU OS 15_0_1 like Mac OS X) WebKit/8612 (KHTML, like Gecko) Mobile/19A348 [FBAN/FBIOS;FBDV/iPad12,2;FBMD/iPad;FBSN/iOS;FBSV/15.0.1;FBSS/2;FBID/tablet;FBLC/en_GB;FBOP/5]
+  os:
+    name: iPadOS
+    version: 15.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad 9 10.2"
+  os_family: iOS
+  browser_family: Unknown
