Adds detection for Apple iPad Pro 3 11"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1039,6 +1039,9 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad8[C,_](?:9|10)'
       model: 'iPad Pro 2 11"'
       device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_][46]'
+      model: 'iPad Pro 3 11"'
+      device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad8[C,_]1[12]'
       model: 'iPad Pro 4 12.9"'
       device: 'tablet'
