Improves detection for Apple iPad Pro 5 12.9"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1063,7 +1063,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad12[C,_][12]'
       model: 'iPad 9 10.2"'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad13[C,_](?:9|11)'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_](?:8|9|11)'
       model: 'iPad Pro 5 12.9"'
       device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
