Adds detection for Apple MacBook Pro 16" (2021)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -873,6 +873,9 @@ Apple:
     - regex: '(?:.+_)?MacBookPro17(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro 13" (2020)'
+    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 16" (2021)'
     - regex: '(?:.+_)?Macmini8(?:%2C|,)1'
       device: 'desktop'
       model: 'Mac Mini (2018)'
