--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7578,3 +7578,19 @@
     model: Netbook R103
   os_family: Android
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.54.1010 (Mac OS/12.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro18,1)
+  os:
+    name: Mac
+    version: 12.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 16" (2021)
+  os_family: Mac
+  browser_family: Unknown
