Improves detection for Apple MacBook Pro 14" (2021)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -876,7 +876,7 @@ Apple:
     - regex: '(?:.+_)?MacBookPro18(?:%2C|,)[12]'
       device: 'desktop'
       model: 'MacBook Pro 16" (2021)'
-    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)3'
+    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)[34]'
       device: 'desktop'
       model: 'MacBook Pro 14" (2021)'
     - regex: '(?:.+_)?Macmini8(?:%2C|,)1'
