Adds detection for Apple iMac 21.5" (2017)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7642,3 +7642,35 @@
     model: MacBook Pro 14" (2021)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/16.54.1010 (Mac OS/11.5.1; Desktop; en-US; NonAppStore; Apple/iMac18,1)
+  os:
+    name: Mac
+    version: 11.5.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2017)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/16.54.1010 (Mac OS/11.5.1; Desktop; en-US; NonAppStore; Apple/iMac18,2)
+  os:
+    name: Mac
+    version: 11.5.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2017)
+  os_family: Mac
+  browser_family: Unknown
