--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -695,6 +695,9 @@ Apple:
     - regex: '(?:.+_)?iMac17(?:%2C|,)1'
       device: 'desktop'
       model: 'iMac 27" (2015)'
+    - regex: '(?:.+_)?iMac18(?:%2C|,)[12]'
+      device: 'desktop'
+      model: 'iMac 21.5" (2017)'
     - regex: '(?:.+_)?iMac19(?:%2C|,)2'
       device: 'desktop'
       model: 'iMac 21.5" (2019)'
