--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -698,6 +698,9 @@ Apple:
     - regex: '(?:.+_)?iMac18(?:%2C|,)[12]'
       device: 'desktop'
       model: 'iMac 21.5" (2017)'
+    - regex: '(?:.+_)?iMac18(?:%2C|,)3'
+      device: 'desktop'
+      model: 'iMac 27" (2017)'
     - regex: '(?:.+_)?iMac19(?:%2C|,)2'
       device: 'desktop'
       model: 'iMac 21.5" (2019)'
