Adds detection for Apple iMac 24" (2021)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -716,6 +716,9 @@ Apple:
     - regex: '(?:.+_)?iMac20(?:%2C|,)[12]'
       device: 'desktop'
       model: 'iMac 27" (2020)'
+    - regex: '(?:.+_)?iMac21(?:%2C|,)[12]'
+      device: 'desktop'
+      model: 'iMac 24" (2021)'
     - regex: '(?:.+_)?iMac14(?:%2C|,)2'
       device: 'desktop'
       model: 'iMac 27" (2013)'
