Fix detection for Apple iPad Mini 6 WiFi

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -10166,7 +10166,7 @@
   device:
     type: tablet
     brand: Apple
-    model: iPad Mini 6
+    model: iPad Mini 6 WiFi
   os_family: iOS
   browser_family: Unknown
 - 
