--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1090,7 +1090,10 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
       model: 'iPad Air 4'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad14[C,_][12]'
+    - regex: '(?:Apple-|.+_)?iPad14[C,_]1'
+      model: 'iPad Mini 6 WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad14[C,_]2'
       model: 'iPad Mini 6'
       device: 'tablet'
 
