Fix detection for Apple iPad 9 10.2" WiFi

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1081,7 +1081,10 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad11[C,_][67]'
       model: 'iPad 8 10.2"'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad12[C,_][12]'
+    - regex: '(?:Apple-|.+_)?iPad12[C,_]1'
+      model: 'iPad 9 10.2" WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad12[C,_]2'
       model: 'iPad 9 10.2"'
       device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad13[C,_](?:8|9|10|11)'
