Fix detection for Apple iPad Pro 3 11" WiFi

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -10262,7 +10262,7 @@
   device:
     type: tablet
     brand: Apple
-    model: iPad Pro 3 11"
+    model: iPad Pro 3 11" WiFi
   os_family: iOS
   browser_family: Unknown
 - 
