Fix detection for Apple iPad Pro 5 12.9" WiFi

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -10326,7 +10326,7 @@
   device:
     type: tablet
     brand: Apple
-    model: iPad Pro 5 12.9"
+    model: iPad Pro 5 12.9" WiFi
   os_family: iOS
   browser_family: Unknown
 - 
