--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1090,7 +1090,10 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad12[C,_]2'
       model: 'iPad 9 10.2"'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad13[C,_](?:8|9|10|11)'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_]8'
+      model: 'iPad Pro 5 12.9" WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_](?:9|10|11)'
       model: 'iPad Pro 5 12.9"'
       device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
