Adds detection for iMac Pro 27" (2017)

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7722,3 +7722,19 @@
     model: iMac 24" (2021)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.54.1010 (Mac OS/12.0.1; Desktop; es-MX; NonAppStore; Apple/iMacPro1,1)
+  os:
+    name: Mac
+    version: 12.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac Pro 27" (2017)
+  os_family: Mac
+  browser_family: Unknown
