Improves iPadOS detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2519,3 +2519,11 @@
     version: ""
     platform: ""
     family: Windows
+- 
+  user_agent: RubyBrowser/46.3.30 (iPad; iOS 15.0.2; Scale/2.00)
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: 15.0.2
+    platform: ""
+    family: iOS
