Improves detection for Apple devices (#6900)
* Adds detection for Apple iPad Mini 6

* Adds detection for Apple iPad 9 10.2"

* Adds detection for Apple iPad Pro 5 12.9"

* Adds detection for Apple iPad Pro 3 11"

* Improves detection for Apple iPad Pro 3 11"

* Improves detection for Apple iPad Pro 3 11"

* Improves detection for Apple iPad Pro 5 12.9"

* Improves detection for Apple iPad Pro 5 12.9"

* Adds detection for Apple MacBook Pro 16" (2021)

* Adds detection for Apple MacBook Pro 14" (2021)

* Improves detection for Apple MacBook Pro 16" (2021)

* Improves detection for Apple MacBook Pro 14" (2021)

* Adds detection for Apple iMac 21.5" (2017)

* Adds detection for Apple iMac 27" (2017)

* Adds detection for Apple iMac 24" (2021)

* Fix detection for Apple iPad Mini 6 WiFi

* Fix detection for Apple iPad 9 10.2" WiFi

* Fix detection for Apple iPad Pro 3 11" WiFi

* Fix detection for Apple iPad Pro 5 12.9" WiFi

* Fix for Apple iPad Air 4 WiFi

* Adds detection for iMac Pro 27" (2017)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -701,6 +701,15 @@ Apple:
     - regex: '(?:.+_)?iMac17(?:%2C|,)1'
       device: 'desktop'
       model: 'iMac 27" (2015)'
+    - regex: '(?:.+_)?iMac18(?:%2C|,)[12]'
+      device: 'desktop'
+      model: 'iMac 21.5" (2017)'
+    - regex: '(?:.+_)?iMac18(?:%2C|,)3'
+      device: 'desktop'
+      model: 'iMac 27" (2017)'
+    - regex: '(?:.+_)?iMacPro1(?:%2C|,)1'
+      device: 'desktop'
+      model: 'iMac Pro 27" (2017)'
     - regex: '(?:.+_)?iMac19(?:%2C|,)2'
       device: 'desktop'
       model: 'iMac 21.5" (2019)'
@@ -710,6 +719,9 @@ Apple:
     - regex: '(?:.+_)?iMac20(?:%2C|,)[12]'
       device: 'desktop'
       model: 'iMac 27" (2020)'
+    - regex: '(?:.+_)?iMac21(?:%2C|,)[12]'
+      device: 'desktop'
+      model: 'iMac 24" (2021)'
     - regex: '(?:.+_)?iMac14(?:%2C|,)2'
       device: 'desktop'
       model: 'iMac 27" (2013)'
@@ -879,6 +891,12 @@ Apple:
     - regex: '(?:.+_)?MacBookPro17(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro 13" (2020)'
+    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)[12]'
+      device: 'desktop'
+      model: 'MacBook Pro 16" (2021)'
+    - regex: '(?:.+_)?MacBookPro18(?:%2C|,)[34]'
+      device: 'desktop'
+      model: 'MacBook Pro 14" (2021)'
     - regex: '(?:.+_)?Macmini8(?:%2C|,)1'
       device: 'desktop'
       model: 'Mac Mini (2018)'
@@ -1045,6 +1063,12 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad8[C,_](?:9|10)'
       model: 'iPad Pro 2 11"'
       device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_]4'
+      model: 'iPad Pro 3 11" WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_][5-7]'
+      model: 'iPad Pro 3 11"'
+      device: 'tablet'
     - regex: '(?:Apple-|.+_)?iPad8[C,_]1[12]'
       model: 'iPad Pro 4 12.9"'
       device: 'tablet'
@@ -1063,8 +1087,29 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPad11[C,_][67]'
       model: 'iPad 8 10.2"'
       device: 'tablet'
-    - regex: '(?:Apple-|.+_)?iPad13[C,_][12]'
+    - regex: '(?:Apple-|.+_)?iPad12[C,_]1'
+      model: 'iPad 9 10.2" WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad12[C,_]2'
+      model: 'iPad 9 10.2"'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_]8'
+      model: 'iPad Pro 5 12.9" WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_](?:9|10|11)'
+      model: 'iPad Pro 5 12.9"'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_]1'
+      model: 'iPad Air 4 WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad13[C,_]2'
       model: 'iPad Air 4'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad14[C,_]1'
+      model: 'iPad Mini 6 WiFi'
+      device: 'tablet'
+    - regex: '(?:Apple-|.+_)?iPad14[C,_]2'
+      model: 'iPad Mini 6'
       device: 'tablet'
 
     - regex: 'Apple-?TV2[C,_]1'
