--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7578,3 +7578,163 @@
     model: Netbook R103
   os_family: Android
   browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.54.1010 (Mac OS/12.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro18,1)
+  os:
+    name: Mac
+    version: 12.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 16" (2021)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.54.1010 (Mac OS/12.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro18,3)
+  os:
+    name: Mac
+    version: 12.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 14" (2021)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.54.1010 (Mac OS/12.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro18,2)
+  os:
+    name: Mac
+    version: 12.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 16" (2021)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.54.1010 (Mac OS/12.0.1; Desktop; es-MX; NonAppStore; Apple/MacBookPro18,4)
+  os:
+    name: Mac
+    version: 12.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 14" (2021)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/16.54.1010 (Mac OS/11.5.1; Desktop; en-US; NonAppStore; Apple/iMac18,1)
+  os:
+    name: Mac
+    version: 11.5.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2017)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/16.54.1010 (Mac OS/11.5.1; Desktop; en-US; NonAppStore; Apple/iMac18,2)
+  os:
+    name: Mac
+    version: 11.5.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 21.5" (2017)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office PowerPoint/16.54.1010 (Mac OS/11.5.1; Desktop; en-US; NonAppStore; Apple/iMac18,3)
+  os:
+    name: Mac
+    version: 11.5.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office PowerPoint
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 27" (2017)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.54.1010 (Mac OS/11.6; Desktop; en-US; AppStore; Apple/iMac21,1)
+  os:
+    name: Mac
+    version: "11.6"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 24" (2021)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Word/16.54.1010 (Mac OS/11.6; Desktop; en-US; AppStore; Apple/iMac21,2)
+  os:
+    name: Mac
+    version: "11.6"
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 24" (2021)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: Microsoft Office Excel/16.54.1010 (Mac OS/12.0.1; Desktop; es-MX; NonAppStore; Apple/iMacPro1,1)
+  os:
+    name: Mac
+    version: 12.0.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.54.1010
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac Pro 27" (2017)
+  os_family: Mac
+  browser_family: Unknown
