Adds detection for Mailbird

--- a/regexes/client/pim.yml
+++ b/regexes/client/pim.yml
@@ -97,3 +97,8 @@
 - regex: 'ramboxpro/(\d+\.[\.\d]+)?'
   name: 'Rambox Pro'
   version: '$1'
+
+# Mailbird (https://www.getmailbird.com/)
+- regex: 'Mailbird/(\d+\.[\.\d]+)/'
+  name: 'Mailbird'
+  version: '$1'
