Improves detection for TCL 10 SE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13931,7 +13931,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|6125[FD]|A50[279]DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|6125[FD]|A50[279]DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -13968,7 +13968,7 @@ TCL:
       model: 'L9'
     - regex: 'T770H(?:[);/ ]|$)'
       model: '10L'
-    - regex: 'T766[HAU](?:_(?:EEA|RU))?(?:[);/ ]|$)'
+    - regex: 'T766[AHJU](?:_(?:EEA|RU))?(?:[);/ ]|$)'
       model: '10 SE'
     - regex: 'T671[HF](?:_EEA)?(?:[);/ ]|$)'
       model: '20 SE'
