Improves detection for Samsung Galaxy A02

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15073,7 +15073,7 @@ Samsung:
       model: 'Galaxy A02s'
     - regex: '(?:SAMSUNG-)?SM-A037[F]?'
       model: 'Galaxy A03s'
-    - regex: '(?:SAMSUNG-)?SM-A022G'
+    - regex: '(?:SAMSUNG-)?SM-A022[GM]'
       model: 'Galaxy A02'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'Galaxy A2 Core'
