Improves version detection for Mac

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2543,3 +2543,59 @@
     version: "15.2"
     platform: ""
     family: iOS
+-
+  user_agent: Word/16.50.21061301 CFNetwork/1220.1 Darwin/20.3.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "11.2"
+    platform: x64
+    family: Mac
+-
+  user_agent: Safari/16611.1.21.161.6 CFNetwork/1237 Darwin/20.4.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "11.3"
+    platform: x64
+    family: Mac
+-
+  user_agent: Safari/16611.2.7.1.4 CFNetwork/1240.0.4 Darwin/20.5.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "11.4"
+    platform: x64
+    family: Mac
+-
+  user_agent: Safari/16611.3.10.1.3 CFNetwork/1240.0.4 Darwin/20.6.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "11.5"
+    platform: x64
+    family: Mac
+-
+  user_agent: Empresarial/6.28.1.8 CFNetwork/1312 Darwin/21.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "12.0"
+    platform: x64
+    family: Mac
+-
+  user_agent: Safari/17612.2.9.1.20 CFNetwork/1325.0.1 Darwin/21.1.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 12.0.1
+    platform: x64
+    family: Mac
+-
+  user_agent: Safari/17612.2.9.1.20 CFNetwork/1327.0.1 Darwin/21.2.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "12.1"
+    platform: x64
+    family: Mac
