Adds detection for Hik-Connect

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -770,3 +770,8 @@
 - regex: 'Bose Music'
   name: 'Bose Music'
   version: ''
+
+# HikConnect (https://apps.apple.com/us/app/hik-connect-for-end-user/id1087803190)
+- regex: 'HikConnect'
+  name: 'Hik-Connect'
+  version: ''
