Improves iPadOS detection

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -458,6 +458,10 @@
   name: 'iPadOS'
   version: '$1.$2'
 
+- regex: 'iPhone OS,(1[345]).(\d+[\.\d]*).+iPad'
+  name: 'iPadOS'
+  version: '$1.$2'
+
 ##########
 # iOS
 ##########
