Improve iOS version detection

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -613,6 +613,10 @@
   name: 'iOS'
   version: '$1'
 
+- regex: 'iPhone OS,([\d\.]+).+iPhone'
+  name: 'iOS'
+  version: '$1'
+
 - regex: '(?:Apple-)?(?:iPhone|iPad|iPod)(?:.*Mac OS X.*Version/(\d+\.\d+)|; Opera)?'
   name: 'iOS'
   version: '$1'
