Improves Mac version detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2615,3 +2615,11 @@
     version: 14.4.2
     platform: ""
     family: iOS
+-
+  user_agent: server-bag [Mac OS X,10.14.6,18G8022,MacBookPro15,4]
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.14.6
+    platform: ""
+    family: Mac
