--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -771,7 +771,7 @@
     - regex: '(?:x86_64-apple-)?Darwin/?9.5.[05]'
       version: '10.5.5'
 
-- regex: 'Mac[ +]OS[ +]?X(?:[ /](?:Version )?(\d+(?:[_\.]\d+)+))?'
+- regex: 'Mac[ +]OS[ +]?X(?:[ /,](?:Version )?(\d+(?:[_\.]\d+)+))?'
   name: 'Mac'
   version: '$1'
 
