Improves Android version detection

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -184,6 +184,10 @@
   name: 'Android'
   version: '$1'
 
+- regex: 'A/(\d+[\.\d]*)/'
+  name: 'Android'
+  version: '$1'
+
 ##########
 ## Sailfish OS
 ###########
