Improves detection for Microsoft Outlook

--- a/Tests/Parser/Client/fixtures/pim.yml
+++ b/Tests/Parser/Client/fixtures/pim.yml
@@ -179,3 +179,9 @@
     type: pim
     name: Mailbird
     version: 2.4.30.0
+-
+  user_agent: MacOutlook/16.46.21021202 (Intelx64 Mac OS X 11.2.2 (Build 20D80))
+  client:
+    type: pim
+    name: Microsoft Outlook
+    version: 16.46.21021202
