--- a/regexes/client/pim.yml
+++ b/regexes/client/pim.yml
@@ -9,7 +9,7 @@
   name: 'Outlook Express'
   version: '$1'
 
-- regex: 'Microsoft Outlook(?:[/ ](\d+[\.\d]+))?'
+- regex: '(?:Microsoft Outlook|MacOutlook)(?:[/ ](\d+[\.\d]+))?'
   name: 'Microsoft Outlook'
   version: '$1'
 
