--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -184,7 +184,7 @@
   name: 'Android'
   version: '$1'
 
-- regex: 'A/(\d+[\.\d]*)/'
+- regex: '^A/(\d+[\.\d]*)/'
   name: 'Android'
   version: '$1'
 
