Improve version detection for Pinterest

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -707,3 +707,9 @@
     type: mobile app
     name: Hik-Connect
     version: ""
+-
+  user_agent: Pinterest for Android Tablet/9.32.1 (gta4xlwifi; 11)
+  client:
+    type: mobile app
+    name: Pinterest
+    version: 9.32.1
