--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -81,7 +81,7 @@
   version: '$1'
 
 # Pinterest
-- regex: 'Pinterest(?: for (?:Android|iOS))?(?:/([\d\.]+))?'
+- regex: 'Pinterest(?: for (?:Android(?: Tablet)|iOS))?(?:/([\d\.]+))?'
   name: 'Pinterest'
   version: '$1'
 
