Adds detection for Cortana

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -713,3 +713,9 @@
     type: mobile app
     name: Pinterest
     version: 9.32.1
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; Cortana 1.14.2.19041; 10.0.0.0.19042.1288) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.102 Safari/537.36 Edge/18.19042
+  client:
+    type: mobile app
+    name: Cortana
+    version: 1.14.2.19041
