--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -775,3 +775,8 @@
 - regex: 'HikConnect'
   name: 'Hik-Connect'
   version: ''
+
+# Cortana (https://www.microsoft.com/en-us/)
+- regex: 'Cortana (\d+[\.\d]+)'
+  name: 'Cortana'
+  version: '$1'
