Adds detection for Opera News

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -719,3 +719,9 @@
     type: mobile app
     name: Cortana
     version: 1.14.2.19041
+-
+  user_agent: Opera News/8.3.2254.55686/52.0.2743.10 (Android 11)
+  client:
+    type: mobile app
+    name: Opera News
+    version: 8.3.2254.55686
