--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -780,3 +780,8 @@
 - regex: 'Cortana (\d+[\.\d]+)'
   name: 'Cortana'
   version: '$1'
+
+# Opera News (https://play.google.com/store/apps/details?id=com.opera.app.news)
+- regex: 'Opera News/(\d+[\.\d]+)'
+  name: 'Opera News'
+  version: '$1'
