Adds detection for Adobe Creative Cloud

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -785,3 +785,8 @@
 - regex: 'Opera News/(\d+[\.\d]+)'
   name: 'Opera News'
   version: '$1'
+
+# Adobe Creative Cloud (https://apps.apple.com/us/app/adobe-creative-cloud/id852473028)
+- regex: 'CreativeCloud/(\d+[\.\d]+)'
+  name: 'Adobe Creative Cloud'
+  version: '$1'
