Improves detection for Skype for Business

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -731,3 +731,9 @@
     type: mobile app
     name: Adobe Creative Cloud
     version: 5.6.0.788
+-
+  user_agent: iPhoneLync/6.28.1.8 (iPhone iOS 14.7.1)
+  client:
+    type: mobile app
+    name: Skype for Business
+    version: 6.28.1.8
