--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -362,6 +362,11 @@
   name: 'Skype for Business'
   version: '$1'
 
+# https://apps.apple.com/us/app/skype-for-business/id605841731
+- regex: 'iPhoneLync/([\d\.]+)'
+  name: 'Skype for Business'
+  version: '$1'
+
 # TikTok (https://apps.apple.com/app/id835599320 | https://play.google.com/store/apps/details?id=com.zhiliaoapp.musically)
 - regex: '(?:TikTok[/ ]|musical_ly_|AppName/musical_ly app_version/)(\d+\.(?:[\.\d]+))?'
   name: 'TikTok'
