Adds detection for Flipp

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -737,3 +737,15 @@
     type: mobile app
     name: Skype for Business
     version: 6.28.1.8
+-
+  user_agent: Flipp-iOS/775 CFNetwork/1240.0.4 Darwin/20.6.0
+  client:
+    type: mobile app
+    name: Flipp
+    version: ""
+-
+  user_agent: Flipp-iOS/19.0.0 (iPhone; iOS 14.8; Scale/2.00)
+  client:
+    type: mobile app
+    name: Flipp
+    version: 19.0.0
