--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -105,6 +105,15 @@
   name: 'Downcast'
   version: '$1'
 
+# Flipp (https://apps.apple.com/us/app/flipp-weekly-shopping/id725097967)
+- regex: 'Flipp-iOS/.+CFNetwork'
+  name: 'Flipp'
+  version: ''
+
+- regex: 'Flipp-iOS/(\d+[\.\d]+)'
+  name: 'Flipp'
+  version: '$1'
+
 # AFNetworking generic
 - regex: '([^/]+)/(\d+(?:\.\d+)+) \((?:iPhone|iPad); iOS [0-9\.]+; Scale/[0-9\.]+\)'
   name: '$1'
