Adds detection for rekordbox

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -749,3 +749,9 @@
     type: mobile app
     name: Flipp
     version: 19.0.0
+-
+  user_agent: rekordbox/5.8.6.0004 Windows 10(64bit)
+  client:
+    type: mobile app
+    name: rekordbox
+    version: 5.8.6.0004
