--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -804,3 +804,8 @@
 - regex: 'CreativeCloud/(\d+[\.\d]+)'
   name: 'Adobe Creative Cloud'
   version: '$1'
+
+# rekordbox (https://rekordbox.com/en/)
+- regex: 'rekordbox/(\d+[\.\d]+)'
+  name: 'rekordbox'
+  version: '$1'
