Adds detection for Chrome Update

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -780,6 +780,11 @@
   name: 'Edge Update'
   version: '$1'
 
+# Chrome Update (https://www.google.com/chrome/)
+- regex: 'Google(?:Software| )Update/(\d+[\.\d]+)'
+  name: 'Chrome Update'
+  version: '$1'
+
 # Bose Music (https://apps.apple.com/us/app/bose-music/id1364986984)
 - regex: 'Bose Music'
   name: 'Bose Music'
