--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -755,3 +755,15 @@
     type: mobile app
     name: rekordbox
     version: 5.8.6.0004
+-
+  user_agent: GoogleSoftwareUpdate/1.3.16.180 CFNetwork/1325.0.1 Darwin/21.1.0
+  client:
+    type: mobile app
+    name: Chrome Update
+    version: 1.3.16.180
+-
+  user_agent: Google Update/1.3.36.112;winhttp
+  client:
+    type: mobile app
+    name: Chrome Update
+    version: 1.3.36.112
