Adds detection for Windows Push Notification Services

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -767,3 +767,9 @@
     type: mobile app
     name: Chrome Update
     version: 1.3.36.112
+-
+  user_agent: Microsoft-WNS/10.0
+  client:
+    type: mobile app
+    name: Windows Push Notification Services
+    version: "10.0"
